--- a/milli_styles.css
+++ b/milli_styles.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+@font-face {
+    font-family: "oswald";
+    src: url(https://fonts.googleapis.com/css?family=Oswald);
+}
 /* 
 Author: Millione Johnson
 Date:  9/6/18    
@@ -21,18 +25,34 @@ body img#potato {
     filter: opacity(80%); */
 
 html {
-    background-image: url(tree-nature-forest-wilderness-branch-mountain-816014-pxhere.com.jpg); 
+    background-image: url(tree-nature-forest-wilderness-branch-mountain-816014-pxhere.com.jpg);
+    background-repeat: no-repeat; 
+    background-size: cover;
 } 
 
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background: rgb(74, 135, 68);
-    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
-    border: 6px solid rgba(255, 255, 255, 0.623); 
+    /* background: rgb(255, 255, 255); */
+    background: #3b7056f8;
+     /* background: linear-gradient(90deg, rgb(74, 135, 68) 23%, rgb(62, 180, 95) 68%, #438560 76%);  */
+    border: 10px ridge rgba(255, 255, 255, 0.623);
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    box-shadow: 5px;
+    position: sticky; 
     /* background-color: #333; */
 }
 
+li {
+    border-right: 1px solid #bbb;
+}
+  
+li:last-child {
+    border-right: none;
+}
+  
 ::after {
     clear: both;
     content: "";
@@ -41,9 +61,9 @@ html {
 
 /* Style the topnav links */
 .topnav a {
-    float: right;
+    float: left;
     display: block;
-    color: rgba(255, 255, 255, 0.623);
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -52,33 +72,42 @@ html {
 
 /* Change color on hover */
 .topnav a:hover {
-    background-color: rgba(255, 255, 255, 0.623) ;
+    background-color: rgba(126, 126, 126, 0.781); ;
     color: black;
 }
 
 p {
-    background-color: rgba(128, 128, 128, 0.459);
+    /* background-color: rgba(128, 128, 128, 0.459); */
+    background: rgb(74, 135, 68);
+    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
     color: white;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.75em;
 }
 
 h1 {
     color: white;
+    background: rgb(74, 135, 68);
+    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
+    border: 10px ridge rgba(255, 255, 255, 0.623) ; 
+    font-size: 10em;
     text-align: center;
 }
 
 body {
-    /* width: 90%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
-    background-image: url('tree-nature-forest-wilderness-branch-mountain-816014-pxhere.com.jpg'); */
+    font-family: 'Oswald', sans-serif;
+    font-style: uppercase;
+    /* background: rgb(74, 135, 68);
+    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%); */
 }
 
 footer {
-    background: rgb(74, 135, 68);
-    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
-    border: 6px solid rgba(255, 255, 255, 0.623) ; 
+    background: #3b7056f8;
+    border: 6px ridge rgba(255, 255, 255, 0.623) ; 
     /* background-color: #f1f1f163; */
     padding: 10px;
 }
 
-@import url('@import url('https: //fonts.googleapis.com/css?family=Oswald')
