--- a/milli_styles.css
+++ b/milli_styles.css
@@ -178,10 +178,27 @@ h1#education{
     background: rgb(74, 135, 68);
     background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
     border: 10px ridge rgba(255, 255, 255, 0.623) ; 
-    font-size: 3em;
+    font-size: 5em;
     text-align: left;  
 }
 
+h1#extracurricular {
+    color: white;
+    background: rgb(74, 135, 68);
+    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
+    border: 10px ridge rgba(255, 255, 255, 0.623) ; 
+    font-size: 5em;
+    text-align: center;
+}
+
+h1#contact {
+    color: white;
+    background: rgb(74, 135, 68);
+    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
+    border: 10px ridge rgba(255, 255, 255, 0.623) ; 
+    font-size: 5em;
+    text-align: center;
+}
 body {
     width: 80%;
     margin-left: auto;
@@ -195,5 +212,17 @@ footer {
     border: 6px ridge rgba(255, 255, 255, 0.623) ; 
     /* background-color: #f1f1f163; */
     color: white;
+}
+
+.col-1-3 {
+    position: relative;
+    text-align: center;
+    /* font-size: 40px; */
+    top: -60px;
+    left: 450px;
+    background: rgb(74, 135, 68);
+    background: linear-gradient(90deg, rgba(74, 135, 68, 0.7399334733893557) 23%, rgba(62, 180, 95, 0.582) 68%, rgba(67, 133, 96, 0.678) 76%);
+    width: 20%;
+    border: 10px ridge rgba(255, 255, 255, 0.623); 
 }
 
