--- a/milli_styles.css
+++ b/milli_styles.css
@@ -24,6 +24,10 @@ body img#potato {
     background-position: fixed;
     filter: opacity(80%); */
 
+
+
+
+
 html {
     background-image: url(tree-nature-forest-wilderness-branch-mountain-816014-pxhere.com.jpg);
     background-repeat: repeat-y; 
@@ -31,13 +35,17 @@ html {
     font-family: 'Staatliches', cursive;
 } 
 
-li span {
+/* Adds a background image using the url of a file. Using background repeat y allows the image to repeat vertically so that there is no white space. A font family is added to the whole HTML so that it wil be applied to everything. */
+
+/* li span {
     font-size: 35px;
     background-color: rgba(180, 175, 175, 0.596);
     color: white;
     order: solid 8px gray;
 
-}
+} */
+
+/* Changes all the font size to the 35 pixels. background */
 
 img#my_face {
     width: 29%;
@@ -48,6 +56,7 @@ img#my_face {
     
 }
 
+/* Adds an image of my face for my resume to the bio page. Changes the width so that the image takes up less space on the page. Uses a border that is solid, 8 pixels thick and gray. A shadow is added to the picture and the picture is moved all the way to the left of the page. */
 img#West-MEC {
     /* float: right; */
     position: relative;
@@ -56,6 +65,8 @@ img#West-MEC {
     border: solid 6px orange;
     border-radius: 20%;
 }
+
+/* adds a west-MEC logo image to my education section. Set the position to relative so that I would be able to move the image around. Then, I forced the image up and to the right until it was in the spot I wanted it to be. I added an orange border to the image which was 6 pixels thick and a solid one line border. */
 
 /* Style the top navigation bar */
 .topnav {
@@ -75,19 +86,15 @@ img#West-MEC {
     /* background-color: #333; */
 }
 
-li {
-    border-right: 1px solid #bbb;
-}
-  
-li:last-child {
-    border-right: none;
-}
-  
+ /* Sets the display to block. The navigation is pushed completely to the left. A a transparent green is added as the background with a 10 pixel border which is gray and slightly opaque. */
+   
 ::after {
     clear: both;
     content: "";
     display: table;
 }
+
+/* Clears a floating item. */
 
 /* Style the topnav links */
 .topnav a {
@@ -100,11 +107,14 @@ li:last-child {
     /* border-radius: 80%; */
 }
 
+/* Same style rules as the #topnav but theres is more padding added and the text-decoration gets rid of the line under the links. */
 /* Change color on hover */
 .topnav a:hover {
     background-color: rgba(126, 126, 126, 0.781); ;
     color: black;
 }
+
+/* When the nav is hovered over, the backgroundf color will be a dark opaque gray and thr text color is black. */
 
 p#bio {
     /* background-color: rgba(128, 128, 128, 0.459); */
